--- a/doc/json/mas_settings.json
+++ b/doc/json/mas_settings.json
@@ -1,8 +1,10 @@
 {
   "_auto_mode_toggle": {
     "type": "function",
+    "function_decorators": [],
     "identifier": "_auto_mode_toggle",
     "line": 60,
+    "docstring": "Handles the toggling of fields so the menu options become mutually exclusive",
     "function_args": {
       "args": [],
       "pos_only_args": [],
@@ -11,13 +13,14 @@
       "kw_only_args": [],
       "kw_arg": null,
       "var_arg": null
-    },
-    "docstring": "Handles the toggling of fields so the menu options become mutually exclusive"
+    }
   },
   "_dark_mode_toggle": {
     "type": "function",
+    "function_decorators": [],
     "identifier": "_dark_mode_toggle",
     "line": 75,
+    "docstring": "Handles the toggling of fields so the menu options become mutually exclusive",
     "function_args": {
       "args": [],
       "pos_only_args": [],
@@ -26,13 +29,14 @@
       "kw_only_args": [],
       "kw_arg": null,
       "var_arg": null
-    },
-    "docstring": "Handles the toggling of fields so the menu options become mutually exclusive"
+    }
   },
   "_ui_change_wrapper": {
     "type": "function",
+    "function_decorators": [],
     "identifier": "_ui_change_wrapper",
     "line": 89,
+    "docstring": "Wrapper around UI changes\n\nIN:\n    *args - values to pass to dark mode",
     "function_args": {
       "args": [],
       "pos_only_args": [],
@@ -41,7 +45,6 @@
       "kw_only_args": [],
       "kw_arg": null,
       "var_arg": "args"
-    },
-    "docstring": "Wrapper around UI changes\n\nIN:\n    *args - values to pass to dark mode"
+    }
   }
 }
